--- a/src/components/Task/task.module.css
+++ b/src/components/Task/task.module.css
@@ -1,3 +1,13 @@
 .task {
-  /* Sample  */
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+}
+
+.removeButton {
+  opacity: 0;
+}
+
+.removeButton:hover {
+  opacity: 1;
 }
