--- a/src/components/TaskHeader/taskHeader.module.css
+++ b/src/components/TaskHeader/taskHeader.module.css
@@ -1,3 +1,6 @@
 .taskHeader {
-  /* Sample */
+  border: 1px solid;
+  padding: 2rem;
+  background-color: #ccc;
+  background-image: linear-gradient(135deg, #6bffa0 10%, #0e5cad 100%);
 }
